                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

____________________________________________________________________
** CHANGES ALONG siesta@uam.es--2006/siesta--fixes--2.0
--------------------------------------------------------------------
(Patches leading up to the 2.0.2 bugfix release)

2007-05-17 21:55:36 GMT	Alberto Garcia <albertog@icmab.es>	patch-3

Summary: Wrap several I/O operations for MPI. Other parallel fixes

* The calls to io_close in iohs.F were not restricted to the master node.

* Wrap output in broyden_optim.F

* Fix allocation of temporary array in savepsi in parallel

Some nodes might not have any occupied orbitals assigned to them, so
one has to be careful in the allocation of a buffer array in MPI.
Allocate using the dimensions on the master node.

* Add 'show_distribution' routine to warn (for now) the user
  when there are nodes which do not handle any orbitals.

* Add experimental 'compare' target to Makefile.

* Add 'born_spin' test.

2007-05-17 21:30:36 GMT	Alberto Garcia <albertog@icmab.es>	patch-2

Summary: Fix units conversion in Util/Optical/optical
          Parallel bug fix and cleanup in writewave.F

(Daniel Sanchez)
 
Optical.f is a program to analyze the file .EPSIMG and obtain the
optical properties. A unit conversion was done from eV to Ry instead
of to Ha.
 
(Julian Gale)
 
The code in writewave.F has been cleaned up a bit and a fix for a bug
appearing in parallel execution has been fixed.

2007-05-17 20:50:36 GMT	Alberto Garcia <albertog@icmab.es>	patch-1

Summary: Fix for k-point update when kgrid_cutoff is used. Vol2 fix.

The user can specify a kgrid_cutoff or a Monkhorst-Pack grid
to determine the k-point sampling. 

If a MP grid is specified and there are unit-cell changes during the
calculation, the k-point set does not change (in fractional
reciprocal-lattice coordinates). The sampling accuracy changes
implicitly.
